--- a/crispy_forms/templates/uni_form/field.html
+++ b/crispy_forms/templates/uni_form/field.html
@@ -3,10 +3,10 @@
 {% if field.is_hidden %}
     {{ field }}
 {% else %}
-    <div id="div_{{ field.auto_id }}" class="ctrlHolder{% if wrapper_class %} {{ wrapper_class }}{% endif %}{% if field.errors and form_show_errors %} error{% endif %}{% if field|is_checkbox %} checkbox{% endif %}{% if field.css_classes %} {{ field.css_classes }}{% endif %}">
+    <div id="div_{{ field.auto_id }}" class="ctrl-holder{% if wrapper_class %} {{ wrapper_class }}{% endif %}{% if field.errors and form_show_errors %} error{% endif %}{% if field|is_checkbox %} checkbox{% endif %}{% if field.css_classes %} {{ field.css_classes }}{% endif %}">
         {% if form_show_errors %}
             {% for error in field.errors %}
-                <p id="error_{{ forloop.counter }}_{{ field.auto_id }}" class="errorField">
+                <p id="error_{{ forloop.counter }}_{{ field.auto_id }}" class="error-field">
                     {{ error }}
                 </p>
             {% endfor %}
@@ -17,8 +17,8 @@
                 {% crispy_field field %}
             {% endif %}
 
-            <label for="{{ field.id_for_label }}" {% if field.field.required %}class="requiredField"{% endif %}>
-                {{ field.label|safe }}{% if field.field.required %}<span class="asteriskField">*</span>{% endif %}
+            <label for="{{ field.id_for_label }}" {% if field.field.required %}class="required-field"{% endif %}>
+                {{ field.label|safe }}{% if field.field.required %}<span class="asterisk-field">*</span>{% endif %}
             </label>
         {% endif %}
 
@@ -27,7 +27,7 @@
         {% endif %}
 
         {% if field.help_text %}
-            <div id="hint_{{ field.auto_id }}" class="formHint">{{ field.help_text|safe }}</div>
+            <div id="hint_{{ field.auto_id }}" class="form-hint">{{ field.help_text|safe }}</div>
         {% endif %}
     </div>
 {% endif %}
