--- a/crispy_forms/templates/uni_form/multifield.html
+++ b/crispy_forms/templates/uni_form/multifield.html
@@ -3,17 +3,17 @@
 {% if field.is_hidden %}
     {{ field }}
 {% else %}
-    <div id="div_{{ field.auto_id }}" class="ctrlHolder {% if field|is_checkbox %}checkbox{% endif %} ">
+    <div id="div_{{ field.auto_id }}" class="ctrl-holder {% if field|is_checkbox %}checkbox{% endif %} ">
         {% if form_show_labels and field.label %}
-            <label for="{{ field.id_for_label }}" {% if field.field.required %}class="requiredField"{% endif %}>
-                {{ field.label|safe }}{% if field.field.required %}<span class="asteriskField">*</span>{% endif %}
+            <label for="{{ field.id_for_label }}" {% if field.field.required %}class="required-field"{% endif %}>
+                {{ field.label|safe }}{% if field.field.required %}<span class="asterisk-field">*</span>{% endif %}
             </label>
         {% endif %}
 
         {% crispy_field field %}
         
         {% if field.help_text %}
-            <div id="hint_{{ field.auto_id }}" class="formHint">{{ field.help_text|safe }}</div>
+            <div id="hint_{{ field.auto_id }}" class="form-hint">{{ field.help_text|safe }}</div>
         {% endif %}
     </div>
 {% endif %}
