--- a/crispy_forms/templates/uni_form/errors.html
+++ b/crispy_forms/templates/uni_form/errors.html
@@ -1,5 +1,5 @@
 {% if form.errors and form.non_field_errors %}
-    <div id="errorMsg">
+    <div id="error-msg">
         {% if form_error_title %}<h3>{{ form_error_title }}</h3>{% endif %}
         <ol>
             {{ form.non_field_errors|unordered_list }}
