--- a/crispy_forms/templates/uni_form/field.strict.html
+++ b/crispy_forms/templates/uni_form/field.strict.html
@@ -3,9 +3,9 @@
 {% if field.is_hidden %}
     {{ field }}
 {% else %}
-    <div id="div_{{ field.auto_id }}" class="ctrlHolder{% if field.errors %} error{% endif %}{% if field|is_checkbox %} checkbox{% endif %}{% if field.field.widget.attrs.class %} {{ field.field.widget.attrs.class }}{% endif %}{% if field.css_classes %} {{ field.css_classes }}{% endif %}">
+    <div id="div_{{ field.auto_id }}" class="ctrl-holder{% if field.errors %} error{% endif %}{% if field|is_checkbox %} checkbox{% endif %}{% if field.field.widget.attrs.class %} {{ field.field.widget.attrs.class }}{% endif %}{% if field.css_classes %} {{ field.css_classes }}{% endif %}">
         {% for error in field.errors %}
-            <p id="error_{{ forloop.counter }}_{{ field.auto_id }}" class="errorField">
+            <p id="error_{{ forloop.counter }}_{{ field.auto_id }}" class="error-field">
                 {{ error }}
             </p>
         {% endfor %}
@@ -15,7 +15,7 @@
         {% endif %}
 
         {% if field.label %}
-            <label for="{{ field.id_for_label }}" class="inlineLabel">
+            <label for="{{ field.id_for_label }}" class="inline-label">
                 {{ field.label|safe }}{% if field.field.required %}<em>*</em>{% endif %}
             </label>
         {% endif %}
@@ -25,7 +25,7 @@
         {% endif %}
 
         {% if field.help_text %}
-            <p id="hint_{{ field.auto_id }}" class="formHint">{{ field.help_text|safe }}</p>
+            <p id="hint_{{ field.auto_id }}" class="form-hint">{{ field.help_text|safe }}</p>
         {% endif %}
     </div>
 {% endif %}
